--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body> 
     <!---HEADER--> 
     <div class:"header"> 
-       <img src="images/BeritaHarian.png"> 
+       <img src="images/beritaHarian.png"> 
       <h1>BERITA HARIAN</h1> 
     </div> 
     <!---MENU---> 
