--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
        font-size:10mm; 
        font-style:bold; 
        padding:90px; 
-       float:left; 
+       float:right; 
        text-align:center; 
      } 
      .logo img { 
