--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
        padding:90px; 
        float:left; 
        text-align:center; 
+       margin:auto;
      } 
      .logo img { 
        width:90px; 
