--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
   <body> 
     <!---HEADER--> 
     <div class:"header"> 
-       <img src="images/beritaharian.png"> 
+      <div class:"header_logo"><img src="images/beritaharian"></div>
       <h1>BERITA HARIAN</h1> 
+      <
     </div> 
     <!---MENU---> 
     <div class="menu">
