--- a/index.html
+++ b/index.html
@@ -3,30 +3,13 @@
     <title>BERITA HARIAN</title> 
    <style> 
      .header { 
-       font-size:10mm; 
-       font-style:bold; 
-       padding:90px; 
-       float:left; 
-       text-align:center; 
-       margin:auto;
-     } 
-     .logo img { 
-       width:90px; 
-       float:left; 
-     } 
-     .img { 
-       width:20px; 
-       padding:5px; 
-       margin-top:50px; 
-       border-radius:50%; 
-       float:right; 
-     } 
+       
     </style> 
   </head> 
   <body> 
     <!---HEADER--> 
     <div class:"header"> 
-      <div class:"header_logo"><img src="images/beritaharian"></div>
+      <div class:"header_logo"><img src="images/beritaharian.png"></div>
       <h1>BERITA HARIAN</h1> 
       <
     </div> 
