--- a/index.html
+++ b/index.html
@@ -2,7 +2,22 @@
   <head> 
     <title>BERITA HARIAN</title> 
    <style> 
-     .header { 
+     .header img{ 
+       background-position:center;
+       width:90px;
+       float:left;
+       font-size:10mm;
+       padding:90px;
+       float:left;
+     }
+     .img{
+       width:20px;
+       padding:5px;
+       margin-top:5px;
+       border-radius:50%
+       float:right;
+     }
+       
        
     </style> 
   </head> 
@@ -11,7 +26,6 @@
     <div class:"header"> 
       <div class:"header_logo"><img src="images/beritaharian.png"></div>
       <h1>BERITA HARIAN</h1> 
-      <
     </div> 
     <!---MENU---> 
     <div class="menu">
