--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
        width:20px;
        padding:5px;
        margin-top:5px;
-       border-radius:50%
+       border-radius:50%;
        float:right;
      }
        
