--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
        padding:90px;
        float:left;
      }
-     .img{
+     .header_logo{
        width:20px;
        padding:5px;
        margin-top:5px;
@@ -23,10 +23,15 @@
   </head> 
   <body> 
     <!---HEADER--> 
-    <div class:"header"> 
-      <div class:"header_logo"><img src="images/beritaharian.png"></div>
+    <div class="header"> 
+      <div class="header"="images/beritaharian.png">
+      <img src="images/facebook.png" class="header_logo">
+      <img src="images/twitter.png"  class=header_logo">
+      <img src="images/instagram.png" class="header_logo">
+      <img src="images/youtube.png" class="header_logo">
+   </div>
       <h1>BERITA HARIAN</h1> 
-    </div> 
+  
     <!---MENU---> 
     <div class="menu">
       <ul>
