--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <body> 
     <!---HEADER--> 
     <div class="header"> 
-      <div class="header"="images/beritaharian.png">
+      <div class="header"="images/beritaharian.png"></div>
       <img src="images/facebook.png" class="header_logo">
       <img src="images/twitter.png"  class=header_logo">
       <img src="images/instagram.png" class="header_logo">
