--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
   <head> 
     <title>BERITA HARIAN</title> 
    <style> 
+    .header}
+      text-align:center;
+     font-size:10mm;
+     }
+     
      .header img{ 
        background-position:center;
        width:90px;
