--- a/index.html
+++ b/index.html
@@ -18,7 +18,35 @@
        border-radius:50%;
        float:left;
      }
-       
+         .menu { 
+        margin-top:25px; 
+        border:50px; 
+        text-align:center; 
+        padding:15px; 
+        background-color:black; 
+      } 
+      .menu ul { 
+        list-style-type:none; 
+        margin:auto; 
+      } 
+      .menu li { 
+        float:left; 
+        border-left:1px solid grey; 
+        color:white; 
+      } 
+      .menu a { 
+        text-decoration:none; 
+        display:hidden; 
+        padding:15px; 
+        color:white; 
+      } 
+      .menu li:hover { 
+        background-color:antiquewhite; 
+      } 
+      .menu a:hover { 
+        color:black; 
+        font-weight:bold; 
+      } 
        
     </style> 
   </head> 
