--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
   </head> 
   <body> 
     <!---HEADER--> 
-    <div class="header"> 
-      <div class="header"="images/beritaharian.png"></div>
+    <div class="header"></div>
+      <div class="header"="images/beritaharian.png">
       <img src="images/facebook.png" class="header_logo">
       <img src="images/twitter.png"  class=header_logo">
       <img src="images/instagram.png" class="header_logo">
