--- a/index.html
+++ b/index.html
@@ -2,21 +2,24 @@
   <head> 
     <title>BERITA HARIAN</title> 
    <style> 
-     
+     .header{
+       text-align:right;
+       font-size:10mm;
+     }
      .header img{ 
        background-position:center;
        width:90px;
        float:left;
        font-size:10mm;
        padding:90px;
-       float:right;
+       float:left;
      }
      .header_logo{
        width:20px;
        padding:5px;
        margin-top:5px;
        border-radius:50%;
-       float:left;
+       float:right;
      }
          .menu { 
         margin-top:25px; 
