--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>BERITA HARIAN</title> 
    <style> 
      .header{
-       text-align:right;
+       text-align:center;
        font-size:10mm;
      }
      .header img{ 
@@ -12,14 +12,14 @@
        float:left;
        font-size:10mm;
        padding:90px;
-       float:left;
+       float:right;
      }
      .header_logo{
        width:20px;
        padding:5px;
        margin-top:5px;
        border-radius:50%;
-       float:right;
+       float:left;
      }
          .menu { 
         margin-top:25px; 
@@ -55,14 +55,16 @@
   </head> 
   <body> 
     <!---HEADER--> 
-    <div class="header"></div>
+    <div class="header">
       <div class="header"="images/beritaharian.png">
+        
       <img src="images/facebook.png" class="header_logo">
       <img src="images/twitter.png"  class=header_logo">
       <img src="images/instagram.png" class="header_logo">
       <img src="images/youtube.png" class="header_logo">
    </div>
-      <h1>BERITA HARIAN</h1> 
+    </div>
+      <h1>BERITA HARIAN</h1> class=".header">
   
     <!---MENU---> 
     <div class="menu">
