--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <img src="images/instagram.png" class="header_logo">
       <img src="images/youtube.png" class="header_logo">
   
-      <h1>BERITA HARIAN</h1> class=".header">
+      <h1>BERITA HARIAN</h1> class="header">
     </div>
       </div>
   
