--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
   <body> 
     <!---HEADER--> 
     <div class="header">
-      <div class="header"="images/beritaharian.png">
+      <div class="header"=img src="images/beritaharian.png">
         
       <img src="images/facebook.png" class="header_logo">
       <img src="images/twitter.png"  class=header_logo">
       <img src="images/instagram.png" class="header_logo">
       <img src="images/youtube.png" class="header_logo">
   
-      <h1>BERITA HARIAN</h1> class="header">
+      <h1>BERITA HARIAN</h1>
     </div>
       </div>
   
