--- a/index.html
+++ b/index.html
@@ -2,10 +2,7 @@
   <head> 
     <title>BERITA HARIAN</title> 
    <style> 
-     .header{
-       text-align:center;
-       font-size:10mm;
-     }
+    
      .header img{ 
        background-position:center;
        width:90px;
@@ -56,7 +53,7 @@
   <body> 
     <!---HEADER--> 
     <div class="header">
-      <div class="header"=img src="images/beritaharian.png">
+      <div class="header"=<img src="images/beritaharian.png">
         
       <img src="images/facebook.png" class="header_logo">
       <img src="images/twitter.png"  class=header_logo">
